2003-03-14  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gkb.[ch], system.c (gkb_update_handlers): Added a new function, which
	connects or disconnects the button press event handler and the 
	gdk_window_filter.
	gkb_update(): If we are updating the keymap disconnect the handlers
	gkb_set_keymap_idle (): Reconnect the handlers.
	Fixes (#108378)

2003-01-21  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gkb.[ch], keygrab.c: fix for problems while setting a hotkey #104043

2003-03-10  Kevin Vandersloot <kfv101@psu.edu>

	* gconf.c: check for NULL strings before setting gconf value
	
	* prop-map.c: don't free the whole keymap since we are only changing
	a few items. SHould fix bug #107938

2003-01-20  Shivram U  <shivaram.upadhyayula@wipro.com>

	* prop.c, prop-add.c: Close the "Select Keyboard" dialog if the 
	preferences window is closed.

2003-01-22  Irene Ryan <irene.ryan@sun.com>

	* /help/C/gkb.xml, gkb-C.omf: updated help files for GNOME 2.2
	* /help/C/figures/gkb_applet.png: updated screenshot for help file
	
2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_KeyboardApplet_Factory.server.in.in: added bugzilla * attributtes

2002-12-08  Szabolcs Ban  <shooby@gnome.hu>

	* gkb.c, keygrab.c: Keyboard grabbing and filter now checks keys by
	  Xevent (working right on my broken system, too), fix for #100700
	* prop-add.c: removed an ugly g_message

2002-12-07  Shivram U  <shivaram.upadhyayula@wipro.com>

        * system.c (gkb_system_set_keymap_idle): Using g_strdup_print() to
        allocate for the error string instead of using a static array. (#93473)

2002-12-05  Szabolcs Ban  <shooby@gnome.hu>

	* gkb/kr.png, xmodmap/xmodmap.kr, descs/KR_korean.keyprop: Added (at
          last) the KS (Korean Industrial Standard) keyboard layout and nice
	  flag from Donggyoo Lee <donggyoo@kmaritime.ac.kr>
	* Corrected Yugoslavia to Serbia and Montenegro everywhere,
          hopefully. Thanks for Aleksandar Milovac <amilovac@ptt.yu>
