@@ -1,3 +1,10 @@
+2003-04-30  Kevin Vandersloot <kfv101@psu.edu>
+
+	* prop.c: Make dialog per instance so that two instances don't share. Fixes
+	bug #111933
+	
+	* prop-map.c: fix warning
+
 2003-03-14  Shivram U  <shivaram.upadhyayula@wipro.com>
 
 	* gkb.[ch], system.c (gkb_update_handlers): Added a new function, which
